--- a/client/src/assets/css/sass/pdf_creator.scss
+++ b/client/src/assets/css/sass/pdf_creator.scss
@@ -7,7 +7,22 @@ body {
   background: #fff;
   margin: 0 auto;
 }
+#load_img {
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.65);
 
+  display: none;
+
+  position: fixed;
+
+  border-radius: 0px;
+  img {
+    width: 80px;
+    margin-top: 18%;
+    opacity: 1;
+  }
+}
 .boletos {
   display: none;
   padding: 20px 60px;
@@ -141,6 +156,9 @@ body {
   select {
     width: 200px;
     padding: 4px 5px;
+    option:first-child {
+      display: none;
+    }
   }
 }
 
