--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -705,6 +705,20 @@ body {
   margin: 0 auto;
 }
 
+#load_img {
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.65);
+  display: none;
+  position: fixed;
+  border-radius: 0px;
+}
+#load_img img {
+  width: 80px;
+  margin-top: 18%;
+  opacity: 1;
+}
+
 .boletos {
   display: none;
   padding: 20px 60px;
@@ -835,6 +849,9 @@ body {
 #boleto_master select {
   width: 200px;
   padding: 4px 5px;
+}
+#boleto_master select option:first-child {
+  display: none;
 }
 
 .bg_buttons {
